fix: margin bottom on small screens

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -59,6 +59,7 @@ body {
 
 section.content-narrow {
     padding: 0 0.5rem;
+    margin: 0 0 1rem 0;
 
     @include media-breakpoint-up(lg) {
         padding: unset;
